--- a/SomeChess/Pages/_Host.cshtml
+++ b/SomeChess/Pages/_Host.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @using Microsoft.AspNetCore.Components.Web
+@using SomeChess.Code
 @namespace SomeChess.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
@@ -10,6 +11,7 @@
     <base href="~/" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="css/output.css" rel="stylesheet"/>
+    <title>Chess</title>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
