--- a/SomeChess/wwwroot/css/output.css
+++ b/SomeChess/wwwroot/css/output.css
@@ -564,12 +564,28 @@ video {
   position: relative;
 }
 
+.ml-8 {
+  margin-left: 2rem;
+}
+
+.ml-80 {
+  margin-left: 20rem;
+}
+
 .block {
   display: block;
 }
 
+.flex {
+  display: flex;
+}
+
 .table {
   display: table;
+}
+
+.grid {
+  display: grid;
 }
 
 .contents {
@@ -578,6 +594,14 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
+.h-64 {
+  height: 16rem;
 }
 
 .border-collapse {
@@ -592,6 +616,18 @@ video {
   resize: both;
 }
 
+.content-center {
+  align-content: center;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
 .border {
   border-width: 1px;
 }
@@ -599,6 +635,10 @@ video {
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .text-blue-400 {
@@ -619,6 +659,11 @@ video {
 .text-red-400 {
   --tw-text-opacity: 1;
   color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
+.text-yellow-500 {
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -656,4 +701,50 @@ video {
 
 .blazor-error-boundary::after {
   content: "An error has occurred."
+}
+
+:root {
+  --BackgroundColor: #402218;
+  --SecondBackgroundColor: #865439;
+  --HoverColor: #C68B59;
+  --ActiveColor: #D7B19D;
+  --TextColor: #d3d3d3;
+}
+
+.chessboard {
+  display: grid;
+  grid-template-columns: repeat(8, 80px);
+  grid-template-rows: repeat(8, 80px);
+}
+
+.normalefiguren {
+  width: 70px;
+}
+
+.powns {
+  width: 50px;
+}
+
+.rook {
+  width: 60px;
+}
+
+.knight {
+  width: 65px;
+}
+
+.item {
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.whiteCell {
+  background-color: #eeeed2;
+}
+
+.blackCell {
+  background-color: #769656;
 }
