--- a/SomeChess/wwwroot/css/site.css
+++ b/SomeChess/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-@tailwind base;
+﻿@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -31,11 +31,18 @@
         content: "An error has occurred."
     }
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 :root {
-    --BackgroundColor: #402218;
-    --SecondBackgroundColor: #865439;
-    --HoverColor: #C68B59;
-    --ActiveColor: #D7B19D;
+    --BackgroundColor: #283739;
+    --SecondBackgroundColor: #2c5d63;
+    --HoverColor: #a2c11c;
     --TextColor: #d3d3d3;
 }
 .chessboard {
@@ -71,3 +78,137 @@
 .blackCell {
     background-color: #769656; 
 }
+.playOnline {
+    transition-duration: 0.25s;
+    transition-property: all;
+    transition-timing-function: ease;
+    border-style: solid;
+    margin-top: 3vh;
+    height: 10vh;
+    width: 400px;
+    border-radius: 15px;
+    font-size: 250%;
+    color: white;
+    background-color: #93c75e;
+}
+    .playOnline:hover {
+        background-color: #72c21f;
+    }
+    .playOnline img, .playOnline span {
+        display: inline-block;
+        vertical-align: middle;
+    }
+    .playOnline img {
+        display: inline-block;
+        vertical-align: middle;
+        margin-top: 1.5vh;
+        margin-left: -5vw;
+    }
+.playOnline span {
+    margin-top: -9.5vh;
+    margin-left: 1.5vw;
+    font-size: 50%;
+}
+.playComputer {
+    transition-duration: 0.25s;
+    transition-property: all;
+    transition-timing-function: ease;
+    height: 10vh;
+    width: 400px;
+    border-radius: 15px;
+    font-size: 250%;
+    color: white;
+    background-color: #696969;
+}
+    .playComputer img, .playComputer span {
+        display: inline-block;
+        vertical-align: middle;
+    }
+.playComputer img {
+        display: inline-block;
+        vertical-align: middle;
+        margin-top: 1.5vh;
+        margin-left: -6vw;
+    }
+.playComputer span {
+        margin-top: -9.5vh;
+        margin-right: 1vw;
+        font-size: 50%;
+    }
+    .playComputer:hover {
+        background-color: #636363;
+        
+    }
+.greengradient {
+    font-size: 400%;
+    background-image: linear-gradient(to right, rgb(182, 244, 146), rgb(51, 139, 147));
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.anton-regular {
+    font-family: "Anton", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+.backholder {
+    background-color: var(--SecondBackgroundColor);
+    border-radius: 10px;
+    width: 30vw;
+}
+.chooseTime {
+    background-color: var(--SecondBackgroundColor);
+    display: flex;
+    position: absolute;
+    margin-left: 54.2vw;
+    width: 30vw;
+    border-radius: 10px;
+    height: 60vh;
+    margin-top: -67vh;
+}
+.chooseTime span {
+    color: rgb(242, 84, 84);
+    margin-left: 28.5vw;
+    cursor: pointer;
+}
+.chooseTime span:hover {
+    color: rgb(243, 45, 45);
+}
+.chooseTime button {
+    background-color: var(--HoverColor);
+    width: 6vw;
+    border-radius: 5px;
+}
+    .chooseTime button:hover {
+        transition-duration: 0.15s;
+        transition-property: all;
+        transition-timing-function: ease-in-out;
+        box-shadow: 0 0 15px #72c21f;
+    }
+.selectedTimeShadow {
+    background-color: #32581f;
+    box-shadow: 0 0 20px #72c21f;
+}
+.chooseTime h1 {
+    font-size: 400%;
+}
+    .chooseTime h2 {
+        font-size: 200%;
+        color: white;
+    }
+    .chooseTime a {
+        cursor: pointer;
+        font-size: 300%;
+        box-shadow: 0 0 20px white;
+        color: white;
+        width: 10vw;
+        height: 6.5vh;
+        border-radius: 10px;
+        background-color: #283739;
+        font-weight: 700;
+    }
+        .chooseTime a:hover {
+            background-color: #2f3e41;
+            transition-duration: 0.15s;
+            transition-property: all;
+            transition-timing-function: ease-in-out;
+        }
