--- a/SomeChess/wwwroot/css/output.css
+++ b/SomeChess/wwwroot/css/output.css
@@ -616,6 +616,10 @@ video {
   margin-top: 1.75rem;
 }
 
+.ml-32 {
+  margin-left: 8rem;
+}
+
 .block {
   display: block;
 }
@@ -660,6 +664,14 @@ video {
   height: 16rem;
 }
 
+.h-3\/6 {
+  height: 50%;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
 .w-24 {
   width: 6rem;
 }
@@ -674,6 +686,14 @@ video {
 
 .w-96 {
   width: 24rem;
+}
+
+.w-4\/12 {
+  width: 33.333333%;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .border-collapse {
@@ -731,6 +751,11 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-green-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -760,6 +785,11 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1053,19 +1083,4 @@ video {
 
 .chessPiece[draggable] {
   cursor: pointer;
-  -webkit-backdrop-filter: brightness(20%);
-          backdrop-filter: brightness(20%);
-}
-
-.chessPiece {
-  cursor: pointer;
-}
-
-img.chessPiece[draggable] {
-  -webkit-backdrop-filter: brightness(100%);
-          backdrop-filter: brightness(100%);
-}
-
-.selected {
-  z-index: 999;
 }
