--- a/SomeChess/wwwroot/css/output.css
+++ b/SomeChess/wwwroot/css/output.css
@@ -568,6 +568,22 @@ video {
   position: relative;
 }
 
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
+.mb-32 {
+  margin-bottom: 8rem;
+}
+
+.mb-36 {
+  margin-bottom: 9rem;
+}
+
+.mb-72 {
+  margin-bottom: 18rem;
+}
+
 .ml-12 {
   margin-left: 3rem;
 }
@@ -584,8 +600,16 @@ video {
   margin-left: 6rem;
 }
 
+.ml-32 {
+  margin-left: 8rem;
+}
+
 .ml-52 {
   margin-left: 13rem;
+}
+
+.ml-56 {
+  margin-left: 14rem;
 }
 
 .ml-8 {
@@ -616,10 +640,6 @@ video {
   margin-top: 1.75rem;
 }
 
-.ml-32 {
-  margin-left: 8rem;
-}
-
 .block {
   display: block;
 }
@@ -644,12 +664,32 @@ video {
   display: none;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
 .h-10 {
   height: 2.5rem;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-2\/6 {
+  height: 33.333333%;
+}
+
 .h-24 {
   height: 6rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .h-5 {
@@ -664,16 +704,28 @@ video {
   height: 16rem;
 }
 
-.h-3\/6 {
-  height: 50%;
+.h-screen {
+  height: 100vh;
 }
 
-.h-3 {
-  height: 0.75rem;
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-2 {
+  width: 0.5rem;
 }
 
 .w-24 {
   width: 6rem;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .w-5 {
@@ -684,16 +736,21 @@ video {
   width: 13rem;
 }
 
+.w-64 {
+  width: 16rem;
+}
+
 .w-96 {
   width: 24rem;
 }
 
-.w-4\/12 {
-  width: 33.333333%;
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
 }
 
-.w-4 {
-  width: 1rem;
+.w-screen {
+  width: 100vw;
 }
 
 .border-collapse {
@@ -742,6 +799,14 @@ video {
   justify-self: center;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -754,6 +819,11 @@ video {
 .bg-green-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -772,6 +842,16 @@ video {
   text-align: center;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -782,14 +862,14 @@ video {
   line-height: 1.5rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -1083,4 +1163,35 @@ video {
 
 .chessPiece[draggable] {
   cursor: pointer;
+}
+
+.gameOverScreen {
+  right: 50%;
+  bottom: 50%;
+  transform: translate(72.5%, 80.2%);
+}
+
+.gameOverDesign {
+  background-color: #2c5d63;
+  color: white;
+}
+
+.gameOverScreen span {
+  cursor: pointer;
+  color: #ff6262;
+}
+
+.gameOverScreen span:hover {
+  color: #ff1f1f;
+}
+
+.gameOverDesign a {
+  font-size: 200%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 15px 15px;
+  background-color: #008080;
 }
