Better Console Output that no one needs or uses. Nice!

--- a/SomeChess/Pages/Index.razor
+++ b/SomeChess/Pages/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @inject IJSRuntime JsRuntime;
 @using SomeChess.Components
+@using SomeChess.Code
 <body style="background-color: var(--BackgroundColor);">
 
 </body>
@@ -13,5 +14,11 @@
 
 @code
 {
-
+    protected override Task OnAfterRenderAsync(bool firstRender)
+    {
+        Console.Clear();
+        Console.WriteLine(String.Concat(Enumerable.Repeat(" ", (Console.WindowWidth / 2) - 5)) + "Chess" + String.Concat(Enumerable.Repeat(" ", (Console.WindowWidth / 2) - 5)));
+        LoggingHandler.DrawSeperatorLine(ConsoleColor.Gray);
+        return base.OnAfterRenderAsync(firstRender);
+    }
 }
